# sorrel

./: Cargo.toml  README.md  SCHEMA.md  config.yml  rustfmt.toml  schema.yml
crates/zyn-core/: Cargo.toml  build.rs
crates/zyn-core/src/: lib.rs  literal.rs
crates/zyn-core/src/report/: level.rs
crates/zyn-core/src/stream/: buffer.rs  limit.rs  parse.rs
crates/zynix/: Cargo.toml  build.rs
crates/zynix-macros/: Cargo.toml
crates/zynix-macros/src/: lib.rs  options.rs  parse.rs  to_tokens.rs
crates/zynix-macros/tests/: derive.rs  roundtrip.rs
crates/zynix/benches/: vs_syn.rs
crates/zynix/src/: delim.rs  error.rs  group.rs  ident.rs  lib.rs  punct.rs  spacing.rs
crates/zynix/src/ast/: _crate.rs  args.rs  aux.rs  delimiter_kind.rs  expr.rs  fields.rs  generics.rs  ident.rs  item.rs  label.rs  leaf.rs  macro_call.rs  member.rs  member_item.rs  misc.rs  mod.rs  pat.rs  precedence.rs  punctuated.rs  sig.rs  stmt.rs  use_tree.rs  vis.rs
crates/zynix/src/ast/args/: angle_args.rs  assoc_const_arg.rs  assoc_type_arg.rs  constraint_arg.rs  mod.rs
crates/zynix/src/ast/attr/: attr_args.rs  attr_style.rs  attribute.rs  doc_string.rs  meta.rs  mod.rs
crates/zynix/src/ast/expr/: expr_array.rs  expr_assign.rs  expr_assign_op.rs  expr_async.rs  expr_await.rs  expr_binary.rs  expr_block.rs  expr_break.rs  expr_call.rs  expr_cast.rs  expr_closure.rs  expr_const.rs  expr_continue.rs  expr_field.rs  expr_for_loop.rs  expr_group.rs  expr_if.rs  expr_index.rs  expr_let.rs  expr_lit.rs  expr_loop.rs  expr_macro.rs  expr_match.rs  expr_method_call.rs  expr_paren.rs  expr_path.rs  expr_range.rs  expr_reference.rs  expr_repeat.rs  expr_return.rs  expr_struct.rs  expr_try.rs  expr_try_block.rs  expr_tuple.rs  expr_type.rs  expr_unary.rs  expr_unsafe.rs  expr_while.rs  expr_yield.rs  mod.rs
crates/zynix/src/ast/fields/: field_def.rs  field_value.rs  fields_named.rs  fields_unnamed.rs  mod.rs  variant.rs
crates/zynix/src/ast/generics/: const_param.rs  generic_param.rs  lifetime_param.rs  lifetime_predicate.rs  mod.rs  trait_bound.rs  trait_ref.rs  type_bound.rs  type_param.rs  type_predicate.rs  use_bound.rs  where_clause.rs  where_predicate.rs
crates/zynix/src/ast/item/: item_const.rs  item_enum.rs  item_extern_crate.rs  item_fn.rs  item_foreign_mod.rs  item_impl.rs  item_macro.rs  item_macro_rules.rs  item_mod.rs  item_static.rs  item_struct.rs  item_trait.rs  item_trait_alias.rs  item_type_alias.rs  item_union.rs  item_use.rs  mod.rs
crates/zynix/src/ast/lit/: lit_bool.rs  lit_byte.rs  lit_byte_str.rs  lit_c_str.rs  lit_char.rs  lit_float.rs  lit_int.rs  lit_str.rs  mod.rs
crates/zynix/src/ast/member/: mod.rs
crates/zynix/src/ast/meta/: doc_string.rs  meta_list.rs  meta_name_value.rs  mod.rs
crates/zynix/src/ast/pat/: mod.rs  pat_field.rs  pat_group.rs  pat_ident.rs  pat_lit.rs  pat_or.rs  pat_paren.rs  pat_path.rs  pat_range.rs  pat_reference.rs  pat_slice.rs  pat_struct.rs  pat_tuple.rs  pat_tuple_struct.rs  pat_type.rs
crates/zynix/src/ast/path/: lifetime.rs  lifetime_name.rs  mod.rs  path_arguments.rs  path_segment.rs
crates/zynix/src/ast/sig/: abi.rs  bare_fn_arg.rs  fn_param.rs  mod.rs  receiver.rs  signature.rs  variadic.rs
crates/zynix/src/ast/stmt/: mod.rs  stmt_block.rs  stmt_local.rs  stmt_macro.rs
crates/zynix/src/ast/ty/: mod.rs  q_self.rs  type_array.rs  type_bare_fn.rs  type_group.rs  type_impl_trait.rs  type_macro.rs  type_param.rs  (+9 more)
crates/zynix/src/bridge/: mod.rs  proc_macro2.rs
crates/zynix/src/convert/: mod.rs  proc_macro2.rs
crates/zynix/src/parse/: error.rs  mod.rs  stream.rs
crates/zynix/src/report/: diagnostic.rs  label.rs  level.rs  mark.rs  mod.rs
crates/zynix/src/source/: file.rs  location.rs  map.rs  mod.rs
crates/zynix/src/span/: delim.rs  fallback.rs  mod.rs  range.rs
crates/zynix/src/stream/: buffer.rs  limit.rs  mod.rs  parse.rs
crates/zynix/src/token/: buffer.rs  delim.rs  group.rs  ident.rs  iter.rs  keyword.rs  limit.rs  literal.rs  mod.rs  punct.rs  spacing.rs  stream.rs  underscore.rs
crates/zynix/tests/: syn_parity.rs
(+299 files in other folders)
