[package]
name = "sorrel"
version = "0.0.0"
edition = "2024"
description = "cli for generating ast types from a given schema"

[dependencies]
clap = { version = "4.6", features = ["cargo", "string", "derive", "suggestions"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["std", "derive"] }
serde_with = "3"
serde_yml = "0.0.12"
