[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.package]
version = "0.5.3"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://aacebo.github.io/zyn"
homepage = "https://aacebo.github.io/zyn"
repository = "https://www.github.com/aacebo/zyn"
keywords = ["macro", "framework", "proc", "rust"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns", "no-std"]

[package]
name = "sorrel"
version = "0.0.0"
edition = "2024"
description = "cli for generating ast types from a given schema"

[dependencies]
clap = { version = "4.6", features = ["cargo", "string", "derive", "help", "usage", "error-context", "suggestions"] }
convert_case = "0.11"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["std", "derive"] }
serde_with = "3"
serde_yml = "0.0.12"
syn = { version = "2.0.117", features = ["derive", "full", "extra-traits"] }
