[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.package]
version = "0.5.3"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://aacebo.github.io/zyn"
homepage = "https://aacebo.github.io/zyn"
repository = "https://www.github.com/aacebo/zyn"
keywords = ["macro", "framework", "proc", "rust"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns", "no-std"]
