[package]
name = "zynix-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.117", features = ["derive", "full", "extra-traits"] }

[dev-dependencies]
zynix = { path = "../zynix", features = ["ast", "proc-macro2"] }
proc-macro2 = "1"
