[package]
name = "zynix"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false

[lints.clippy]
collapsible-if = "allow"
new-ret-no-self = "allow"

[features]
ast = []
report = []

[build-dependencies]
version_check = "0.9"

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
